feat: ML Studio, browser parity, LSP/debug hardening, turbovec submodule
Ship PyTorch ML Studio (setup/data/train/infer), decouple from browser
preview, VS Code sidebar toggle, stealth browser visible/hidden mode,
embeddings/jobs/stop-hooks, and LSP bundle fixes. Vendor turbovec as a
git submodule for future Kortex vector search. Exclude large LSP/browser
binaries from git (fetch via scripts).

Co-authored-by: Cursor <cursoragent@cursor.com>